...
    <string name="missing_replay_path_parameter">Missing replay path parameter</string>
    <string name="file_not_found">File not found %s</string>
    <string name="closest_predator">The closest predator is %6.2f meters away</string>
    <string name="predator_around">There are %d predators less than %d meters away</string>
    <string name="you_are_a_prey">You are a Prey, Hide !</string>
    <string name="distance">distance</string>
    <string name="you_are_not_ready">You are not ready, scan your NFC tag</string>
    <string name="you_are_ready">You are ready</string>
    <string name="duration">Duration</string>
    <string name="number_of_catches">Number of catches</string>
    <string name="back_to_main_screen">Back to Main Screen</string>
    <string name="seconds_duration">%d seconds</string>
    <string name="replay_file_format_error">Replay file format error</string>
    <string name="title_activity_error">ErrorActivity</string>
...
