<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVeryDark">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/userPseudoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <TextView
        android:id="@+id/loginTextResult"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/dummy_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userPseudoLogin"
        android:layout_width="257dp"
        android:layout_height="46dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Pseudo"
        android:ems="10"
        android:hint="@string/loginPlaceholderPseudo"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@+id/userNameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameLogin"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/loginPlaceholderName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userPasswordLogin"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/loginPlaceholderPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@+id/loginSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginSubmitButton"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/menu_button_shape"
        android:text="@string/loginButtonText"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/registerSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/menu_button_shape"
        android:text="@string/register_button"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/loginTextResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>